Added Interfaces for use with the UI, added ViewModels in the UI. Biggest change was to make our model entities public until we overcome the issue of DBSets being null when set to Internal

--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -51,6 +51,8 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Facade.cs" />
+    <Compile Include="Interfaces\IPossibleAnswer.cs" />
+    <Compile Include="Interfaces\ITheoryQuestion.cs" />
     <Compile Include="Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
