--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -193,6 +193,8 @@
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Images\APF Logo.png" />
+    <Content Include="Images\logo-apf.png" />
+    <Content Include="Scripts\global.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
