Corrected SelectedAnswer problem in Model (entity was not present)

--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -119,6 +119,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectedAnswer.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="SelectedAssessmentTask.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
