Did work on the TheoryComponent and relevant classes

--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -117,6 +117,18 @@
     <Compile Include="Partials\PracticalComponent\SelectedAssessmentTask.cs" />
     <Compile Include="Partials\TheoryComponentPacker.cs" />
     <Compile Include="Partials\TheoryComponentPilot.cs" />
+    <Compile Include="Partials\TheoryComponent\PossibleAnswer.cs" />
+    <Compile Include="Partials\TheoryComponent\SelectedAnswer.cs" />
+    <Compile Include="Partials\TheoryComponent\SelectedTheoryQuestion.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryComponent.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryComponentFormat.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryComponentFormatPacker.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryComponentFormatPilot.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryComponentPacker.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryComponentPilot.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryQuestion.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryQuestionPacker.cs" />
+    <Compile Include="Partials\TheoryComponent\TheoryQuestionPilot.cs" />
     <Compile Include="Partials\TheoryQuestion.cs" />
     <Compile Include="Partials\SelectedAnswer.cs" />
     <Compile Include="Partials\Test.cs" />
