--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -133,6 +133,8 @@
     </Compile>
     <Compile Include="Models\Examiner\CandidateDisplayItem.cs" />
     <Compile Include="Models\Examiner\Index.cs" />
+    <Compile Include="Models\Exam\AnswerDisplayItem.cs" />
+    <Compile Include="Models\Exam\AnsweredQuestion.cs" />
     <Compile Include="Models\Exam\PossibleAnswer.cs" />
     <Compile Include="Models\Exam\QuestionDisplayItem.cs" />
     <Compile Include="Models\Exam\TheoryQuestion.cs" />
