--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -200,6 +200,7 @@
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Images\APF Logo.png" />
+    <Content Include="Images\bg-gradient-grey.jpg" />
     <Content Include="Images\logo-apf.png" />
     <Content Include="Scripts\global.js" />
     <Content Include="Scripts\html5shiv.js" />
