Added Unity.WebAPI and Unity.MVC3 IoC. Also added first unit test

--- a/APFTestingModel/APFTestingModel.csproj
+++ b/APFTestingModel/APFTestingModel.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ExamPilot.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IFacade.cs" />
     <Compile Include="Interfaces\ICandidate.cs" />
     <Compile Include="Interfaces\IExam.cs" />
     <Compile Include="Interfaces\PracticalComponent\IPracticalComponentTemplatePacker.cs" />
