--- a/APFTestingUI.Tests/APFTestingUI.Tests.csproj
+++ b/APFTestingUI.Tests/APFTestingUI.Tests.csproj
@@ -94,6 +94,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ExamControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\ValuesControllerTest.cs" />
   </ItemGroup>
