--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -222,6 +222,8 @@
     <Content Include="Global.asax" />
     <Content Include="Images\APF Logo.png" />
     <Content Include="Images\arrow.png" />
+    <Content Include="Images\bg-gradient-grey-old.jpg" />
+    <Content Include="Images\bg-gradient-grey.gif" />
     <Content Include="Images\bg-gradient-grey.jpg" />
     <Content Include="Images\cross.png" />
     <Content Include="Images\logo-apf.png" />
