--- a/APFTestingUI/APFTestingUI.csproj
+++ b/APFTestingUI/APFTestingUI.csproj
@@ -286,10 +286,10 @@
     <Content Include="Views\Exam\Result.cshtml" />
     <Content Include="Views\Exam\Review.cshtml" />
     <Content Include="Views\Exam\DisplayError.cshtml" />
+    <Content Include="Views\Shared\_QuestionLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
